# civic-hackathon

./: BUSINESS_MODEL.md  README.md  SEPOLIA_DEPLOYMENT.md
docs/: BUSINESS_MODEL.md  DEPLOYMENT.md  SKILLPASS.md
skillpass/app/: globals.css  page.tsx
skillpass/app/dashboard/: page.tsx
skillpass/app/leaderboard/: page.tsx
skillpass/components/: navigation.tsx
src/client/: next.config.ts  package-lock.json  package.json
src/client/app/: layout.tsx  page.tsx
src/client/components/: auth-header.tsx  providers.tsx  web3zone.tsx
src/contracts/: .gitignore  DEPLOYMENT.md  ReputationToken.sol  SkillNFT.sol  SkillStaking.sol  deploy-sepolia.sh  foundry.toml
src/contracts/script/: Deploy.s.sol  DeployRevenue.s.sol  TestContracts.s.sol
src/contracts/src/: ReputationToken.sol  SkillNFT.sol  SkillRevenue.sol  SkillStaking.sol  SkillStakingEnhanced.sol
src/contracts/test/: SkillPass.t.sol
src/program/: Anchor.toml  README.md  package.json
src/program/programs/program/: Cargo.toml
src/program/programs/program/src/: errors.rs  lib.rs  state.rs
src/program/programs/program/src/instructions/: initialize.rs  investment.rs  mod.rs  reputation.rs  skill.rs  staking.rs
src/program/tests/: program.ts
src/skillpass/: .env.example  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  todolist.md
src/skillpass/app/: globals.css  layout.tsx  page.tsx
src/skillpass/components/: AuthButton.tsx  chain-selector.tsx  copy-button.tsx  dashboard-navigation.tsx  (+7 more)
(+71 files in other folders)
