[package]
name = "program"
version = "0.1.0"
description = "SkillPass - Decentralized Skills Validation & Investment Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"